bat.string1.lessons.bat.string1.StringX.scala.error
stringX:-6: error: Missing closing brace `}' assumed here
try {
^stringX:1: error: expected class or object definition
def stringX(str:String):String = {
^